# ufsaig

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  RUN_CENTOS.txt  build.sh  config_example.json  example.html
.git-original/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-original/info/: refs
.git-original/logs/: HEAD
.git-original/logs/refs/heads/: boost-gil  develop  magick-omp  opencv  prebuild-imagemagick  time_measurement
.git-original/logs/refs/remotes/origin/: develop  magick-omp  opencv  prebuild-imagemagick  time_measurement
.git-original/objects/info/: commit-graph  packs
.git-original/objects/pack/: pack-018531d66d6249dba1d1fafcfcd25a9f055b45df.idx  pack-2f22f4af42efc4bcc55c6aefbfdcd765bb5152d0.idx  pack-51f881f7c5e041600047c15302b77bb92413d6cc.idx  pack-f01447a3d643a33d9ceec92f70f26d7a50519198.idx
.git-original/refs/heads/: develop
.git-original/refs/remotes/origin/: opencv
__MACOSX/drogon-image-service/: ._config_example.json
__MACOSX/drogon-image-service/lib/: ._ImageMagick  ._libcouchbase  ._libhttpserver  ._libmicrohttpd  ._opencv
__MACOSX/drogon-image-service/lib/ImageMagick/www/Magick++/: ._Exception.html
__MACOSX/drogon-image-service/lib/libcouchbase/packaging/: ._README
__MACOSX/drogon-image-service/lib/libcouchbase/src/: ._instance.cc
__MACOSX/drogon-image-service/lib/libcouchbase/src/operations/: ._store.cc
__MACOSX/drogon-image-service/lib/libhttpserver/: ._README.CentOS-7
__MACOSX/drogon-image-service/lib/libhttpserver/src/: ._file_response.cpp  ._http_response.cpp  ._webserver.cpp
__MACOSX/drogon-image-service/lib/libmicrohttpd/: ._INSTALL  ._README
__MACOSX/drogon-image-service/lib/libmicrohttpd/src/microhttpd/: ._connection.c  ._daemon.c  ._response.c
__MACOSX/drogon-image-service/lib/libmicrohttpd/src/testcurl/https/: ._test_https_get.c
__MACOSX/drogon-image-service/lib/opencv/modules/core/src/: ._copy.cpp
__MACOSX/drogon-image-service/lib/opencv/samples/swift/: ._ios
__MACOSX/drogon-image-service/lib/opencv/samples/swift/ios/ColorBlobDetection/: ._ColorBlobDetection.xcodeproj
__MACOSX/drogon-image-service/lib/opencv/samples/swift/ios/FaceDetection/: ._FaceDetectionDynamic.xcodeproj
__MACOSX/drogon-image-service/src/: ._main.cpp
__MACOSX/drogon-image-service/src/couchbase/: ._Command.cpp  ._Connection.cpp  ._Entry.cpp  ._Read.cpp  ._ReadMulti.cpp  ._Worker.cpp  ._Worker.h  ._WriteMulti.cpp
__MACOSX/drogon-image-service/src/model/: ._Sprite.cpp
__MACOSX/drogon-image-service/src/renderer/: ._OpenCVRenderer.cpp
__MACOSX/drogon-image-service/src/repos/: ._ImageStore.cpp
__MACOSX/drogon-image-service/src/services/core/: ._Core.cpp
__MACOSX/drogon-image-service/src/services/core/endpoints/: ._Base64Images.cpp  ._SpriteMaker.cpp
__MACOSX/drogon-image-service/src/services/uploads/: ._Uploads.cpp
__MACOSX/drogon-image-service/src/services/uploads/endpoints/: ._ImageUpload.cpp
__MACOSX/drogon-image-service/src/sprite_controller/: ._SpriteController.cpp
__MACOSX/drogon-image-service/src/utils/: ._Injected.hpp  ._Socket.cpp  ._ThreadPool.cpp  ._ThreadPool.h  ._convert.cpp  ._hex.cpp  ._md5.cpp  ._mime.cpp
lib/libhttpserver/: .gitignore  Makefile.in  config.h.in
lib/libhttpserver/doc/: Makefile.in
lib/libhttpserver/examples/: Makefile.in  deferred_with_accumulator.cpp  minimal_deferred.cpp
lib/libhttpserver/src/: Makefile.in
lib/libhttpserver/src/httpserver/: basic_auth_fail_response.hpp  deferred_response.hpp  digest_auth_fail_response.hpp  file_response.hpp  http_request.hpp  http_resource.hpp  http_response.hpp  string_response.hpp
lib/libhttpserver/test/: Makefile.in
lib/libmicrohttpd/doc/: libmicrohttpd.info
lib/opencv/samples/swift/ios/ColorBlobDetection/ColorBlobDetection.xcodeproj/xcuserdata/diamat.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/opencv/samples/swift/ios/ColorBlobDetection/ColorBlobDetectionDynamic.xcodeproj/xcuserdata/diamat.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/opencv/samples/swift/ios/FaceDetection/FaceDetection.xcodeproj/xcuserdata/diamat.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/opencv/samples/swift/ios/FaceDetection/FaceDetectionDynamic.xcodeproj/xcuserdata/diamat.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: App.cpp  App.h  Config.cpp  Config.h  DataProvider.h  main.cpp
src/couchbase/: Command.cpp  Command.h  Config.cpp  Config.h  Connection.cpp  Connection.h  CreateOpts.cpp  CreateOpts.h  Decl.h  Entry.cpp  Entry.h  Read.cpp  Read.h  ReadMulti.cpp  ReadMulti.h  Worker.cpp  Worker.h  Write.cpp  Write.h  WriteMulti.cpp  WriteMulti.h  client.h
src/image_controller/: ImageController.cpp  ImageController.h  ImageDescriptor.h
src/model/: Image.cpp  Image.h  ImageVersion.cpp  ImageVersion.h  Rect.cpp  Rect.h  Sprite.cpp  Sprite.h  Tile.h
src/renderer/: BlobWrapper.hpp  ImageRenderer.cpp  ImageRenderer.h  MagickRenderer.cpp  MagickRenderer.h  OpenCVRenderer.cpp  OpenCVRenderer.h
src/repos/: ImageStore.cpp  ImageStore.h
src/services/: HttpService.cpp  HttpService.h  ServiceDecl.h
src/services/core/: Core.cpp  Core.h
src/services/core/endpoints/: Base64Images.cpp  Base64Images.h  ImageGetter.cpp  ImageGetter.h  ImageMeta.cpp  ImageMeta.h  SpriteCSS.cpp  SpriteCSS.h  SpriteMaker.cpp  SpriteMaker.h  SpriteSheet.cpp  SpriteSheet.h
src/services/uploads/: Uploads.cpp  Uploads.h
src/services/uploads/endpoints/: ImageUpload.cpp  ImageUpload.h
src/sprite_controller/: SpriteController.cpp  SpriteController.h
src/utils/: ArrayWrapper.h  ImageResponse.cpp  ImageResponse.h  Injected.hpp  MultiPartForm.cpp  MultiPartForm.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h  base64.cpp  base64.h  convert.cpp  convert.h  hex.cpp  hex.h  md5.cpp  md5.h  mime.cpp  mime.h
static/: image_upload.html  upload_success.html
